//
// DISCLAIMER
//
// Copyright 2025 ArangoDB GmbH, Cologne, Germany
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright holder is ArangoDB GmbH, Cologne, Germany
//

syntax = "proto3";

package authorization;

option go_package = "github.com/arangodb/kube-arangodb/integrations/authorization/v1/definition";

import "integrations/authorization/v1/definition/types.proto";

// AuthorizationV1PermissionRequest request for the Permission evaluation request
message AuthorizationV1PermissionRequest {
  // Defines the User
  string user = 1;

  // Defines the list of roles
  repeated string roles = 2;

  // Defines the action
  string action = 3;

  // Defines the resource
  string resource = 4;
}

// AuthorizationV1PermissionResponse request for the Permission evaluation response
message AuthorizationV1PermissionResponse {
  // Message of the Permission evaluation
  string message = 1;

  // Effect of the permission evaluation
  AuthorizationV1Effect effect = 2;
}

