//
// DISCLAIMER
//
// Copyright 2026 ArangoDB GmbH, Cologne, Germany
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright holder is ArangoDB GmbH, Cologne, Germany
//

syntax = "proto3";

package service;

import "integrations/shared/v1/definition/empty.proto";

import "pkg/sidecar/services/authorization/types/policy.proto";
import "pkg/sidecar/services/authorization/types/role.proto";

import "google/protobuf/duration.proto";

option go_package = "github.com/arangodb/kube-arangodb/pkg/sidecar/services/authorization/definition";

// AuthorizationPoolService Service implementation
service AuthorizationPoolService {
  // Pools policy changes from the API.
  rpc PoolPolicyChanges(AuthorizationPoolRequest) returns (stream AuthorizationPoolPolicyResponse);

  // Gets Current Policy setup.
  rpc GetPolicy(shared.Empty) returns (stream AuthorizationPoolPolicyResponse);

  // Roles policy changes from the API.
  rpc PoolRoleChanges(AuthorizationPoolRequest) returns (stream AuthorizationPoolRoleResponse);

  // Gets Current Role setup.
  rpc GetRole(shared.Empty) returns (stream AuthorizationPoolRoleResponse);
}

// AuthorizationPoolService Policy Response
message AuthorizationPoolPolicyResponse {
  // List of the Policy Response Items
  repeated AuthorizationPoolPolicyResponseItem items = 1;
}

// AuthorizationPoolService Policy Response Item
message AuthorizationPoolPolicyResponseItem {
  // Name of the policy
  string name = 1;

  // Index of the policy
  uint32 index = 2;

  // Policy Content
  types.Policy item = 3;
}

// AuthorizationPoolService pool request
message AuthorizationPoolRequest {
  // Start Index
  uint32 start = 1;
  // Timeout of the pool operation if no changes has been propagated
  google.protobuf.Duration timeout = 2;
}

// AuthorizationPoolService Role Response
message AuthorizationPoolRoleResponse {
  // List of the Role Response Items
  repeated AuthorizationPoolRoleResponseItem items = 1;
}

// AuthorizationPoolService Role Response Item
message AuthorizationPoolRoleResponseItem {
  // Name of the role
  string name = 1;

  // Index of the role
  uint32 index = 2;

  // Role Content
  types.Role item = 3;
}
